# repoVM

plugin-manager/: Dockerfile  README.md  ReleaseNote.yml  app.py  debug.py  dev-variables.env  main.py  pip.conf  pyproject.toml  requirements.txt  variables.yml
plugin-manager/ci_scripts/: build.sh  test.sh
plugin-manager/data/keys/: private  public
plugin-manager/scripts/: log.py
plugin-manager/scripts/config/: __init__.py
plugin-manager/scripts/constants/: __init__.py  api.py  db_constants.py  mongo_constants.py  schemas.py  secrets.py  sonar_constants.py  ui_components.py
plugin-manager/scripts/db/: __init__.py  redis_conn.py
plugin-manager/scripts/errors/: __init__.py
plugin-manager/scripts/utils/: common_util.py  db_name_util.py  docker_util.py  external_services.py  git_tools.py  minio_util.py  mongo_util.py  notification_util.py  preflight.py  rbac.py  sonarqube_scan.py
plugin-manager/templates/: Dockerfile-template  Dockerfile-template-v1  Dockerfile-template-v2
plugin-manager/tests/test_db_mongo_plugin_customapps/: test_db_mongo_customsappsplugin.py
plugin-manager/tests/test_db_mongo_plugins/: test_db_deployedPlugins.py  test_db_pluginVulnerability.py  test_db_pluginmeta.py
plugin-manager/tests/test_engine/: test_protocols.py
plugin-manager/tests/test_main/: test_main.py
plugin-manager/tests/test_plugin_crud/: test_plugin_crud_apis.py
plugin-manager/tests/test_service_api/: test_service_pluginapi.py
plugin-manager/tests/test_services_handler/: test_handler_uiServices.py  test_plugins_handler.py  test_utils_deployment.py
(+166 files in other folders)
