[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "__version__.py"

[project]
name = "ut_plugin_manager"
dynamic = ["version"]
description = "A suite of services to manage plugins in UnifyTwin"
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
   # "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "E402",
    "B904",
    "B905",
    "B009",
    "C417"

]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 19

[tool.isort]
profile = "black"
[tool.coverage.report]
precision = 2
fail_under = 0
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "raise NotImplementedError"
]
[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
omit=[
    "*/tests/*"
]
